--- a/Android Application Development using Kotlin/app_motivation/app/src/main/res/layout/activity_splash.xml
+++ b/Android Application Development using Kotlin/app_motivation/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple_500"
-    tools:context=".SplashActivity">
+    tools:context=".ui.SplashActivity">
 
     <TextView
         android:id="@+id/txtStart"
@@ -32,14 +32,15 @@
         app:layout_constraintTop_toBottomOf="@+id/txtStart"/>
 
     <Button
+        android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="330dp"
         android:text="@string/save"
         android:textColor="@color/purple_500"
         android:backgroundTint="@color/white"
-        app:layout_constraintStart_toStartOf="@+id/editName"
-        app:layout_constraintTop_toBottomOf="@+id/editName" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="100dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
