--- a/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/app/src/main/res/layout/activity_articles.xml
+++ b/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/app/src/main/res/layout/activity_articles.xml
@@ -4,27 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.ArticlesActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rc_news"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:listitem="@layout/item_news"
+    <WebView
+        android:id="@+id/webview_article"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/progress_list_data"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="?attr/progressBarStyle"
-        android:background="@android:color/transparent"
-        android:visibility="invisible"
+        android:src="@drawable/ic_favorite"
+        android:backgroundTint="@color/white"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/favorite_string_resource" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
