--- a/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/app/src/main/res/layout/activity_favorite.xml
+++ b/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/app/src/main/res/layout/activity_favorite.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.FavoriteActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rc_news"
+        android:id="@+id/rc_favorite_news"
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:listitem="@layout/item_news"
@@ -15,16 +15,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/progress_list_data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="?attr/progressBarStyle"
-        android:background="@android:color/transparent"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
