--- a/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/app/src/main/res/layout/activity_search.xml
+++ b/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/app/src/main/res/layout/activity_search.xml
@@ -4,20 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.SearchActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rc_news"
+    <SearchView
+        android:id="@+id/search_news"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:listitem="@layout/item_news"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:padding="2dp"
+        android:iconifiedByDefault="true"
+        android:background="@drawable/search_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        tools:listitem="@layout/item_news"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_news" />
+
+
     <ProgressBar
-        android:id="@+id/progress_list_data"
+        android:id="@+id/progress_list_data_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="?attr/progressBarStyle"
@@ -26,5 +43,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
