Change folder to app_news_mvvm

--- a/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news_mvvm/app/src/main/res/navigation/nav_graph.xml
+++ b/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news_mvvm/app/src/main/res/navigation/nav_graph.xml
@@ -33,7 +33,7 @@
         android:name="com.lvb.projects.app_news_mvvm.ui.fragments.webview.WebViewFragment"
         android:label="News" >
         <argument
-            android:name="Article"
+            android:name="article"
             app:argType="com.lvb.projects.app_news_mvvm.data.local.model.Article" />
     </fragment>
 </navigation>
