--- a/Full Android Development 2022 - Create 18 Apps/app_video_player/app/src/main/res/values/colors.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_video_player/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_color">#393939</color>
+
+    <color name="color_primary">#F44336</color>
+    <color name="color_primary_dark">#D32F2F</color>
+    <color name="color_primary_accent">#D32F2F</color>
+
+
 </resources>
