Finishing app_task_list

--- a/Full Android Development 2022 - Create 18 Apps/app_task_list/app/src/main/res/layout/activity_add_task.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_task_list/app/src/main/res/layout/activity_add_task.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddTaskActivity">
+    android:fitsSystemWindows="false"
+    tools:context=".ui.addTask.AddTaskActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
@@ -17,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txtTask"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter a task" />
