--- a/Full Android Development 2022 - Create 18 Apps/app_organizze/app/src/main/res/layout/activity_expense.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_organizze/app/src/main/res/layout/activity_expense.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/edit_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
@@ -48,6 +48,7 @@
         app:layout_constraintVertical_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Ex: 23/04/2023" />
@@ -68,6 +69,7 @@
         app:layout_constraintVertical_bias="0.16">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Ex: Salário" />
@@ -86,13 +88,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Ex: Salário mensal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/fab_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -102,6 +105,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        android:focusable="true" />
+        android:focusable="true"
+        android:onClick="saveExpense" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
