--- a/Full Android Development 2022 - Create 18 Apps/app_organizze/app/src/main/res/layout/activity_revenue.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_organizze/app/src/main/res/layout/activity_revenue.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:ems="10"
-            android:hint="R$ 00.00"
+            android:hint="$ 00.00"
             android:inputType="numberDecimal"
             android:textAlignment="textEnd"
             android:textColor="@color/white"
